main functional; decimals bug remains; shift keyboard symbols not working

--- a/src/App.scss
+++ b/src/App.scss
@@ -69,6 +69,7 @@ body,
     color: $btn-action-text;
     grid-column-end: 5;
     font-size: 46px;
+    padding-bottom: 16px;
 
     &:hover,
     &:active,
